adicionado imagens novas

--- a/index.html
+++ b/index.html
@@ -14,11 +14,22 @@
 </div> 
 
     <P>No Starbucks, cada visita é uma experiência única que vai além de uma simples xícara de café. <br> 
-    Nosso site é o seu portal para explorar a ampla variedade de bebidas artesanais, acompanhamentos deliciosos e novidades irresistíveis.</P> 
+    Nosso site é o seu portal para explorar a ampla variedade de bebidas artesanais, acompanhamentos deliciosos
+     e novidades irresistíveis.</P>
 
-    <div class="copoverde">
+<div>
+ <h2 class= "cliqueaqui"> clique aqui </h2>
+</div>
+ 
+
+
+<div class="copoverde">
   <img class= "copoverde" src="produto1.png"> 
 </div>
-    
+
+<div>
+<img class= "logo" src= 'logobr.png'>
+</div> 
+
 </body>
 </html>
