adicionado fontes e imagem de fundo

--- a/index.html
+++ b/index.html
@@ -8,19 +8,28 @@
     <title>www.starbucks.com</title>
 </head>
 <body>
+  <div class= 'acesso'>
+    <ul>
+      <li>Casa</li>
+      <li>Menu</li>
+      <li>Contato</li>
+      <li>Quais as novas</li>
+    </ul>
+  </div>
+   
+  
     <h1>NÃO É APENAS UM CAFÉ É</h1>
 <div>
 <H1 class="starbucks"> STAR BUCKS </H1>
 </div> 
 
-    <P>No Starbucks, cada visita é uma experiência única que vai além de uma simples xícara de café. <br> 
+    <P class= 'descrição'> No Starbucks, cada visita é uma experiência única que vai além de uma simples xícara de café. <br> 
     Nosso site é o seu portal para explorar a ampla variedade de bebidas artesanais, acompanhamentos deliciosos
      e novidades irresistíveis.</P>
 
-<div>
+
 <h2 class= "cliqueaqui"> clique aqui </h2>
 </div>
- 
 
 
 <div class="copoverde">
@@ -30,6 +39,8 @@
 <div>
 <img class= "logo" src= 'logobr.png'>
 </div> 
+
+
 
 </body>
 </html>
