adicionado nvas imagens

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <link  rel="icon" href="star bucks icon.jpg" > 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>www.starbucks.com</title>
+
 </head>
 <body>
   <div class= 'acesso'>
@@ -34,6 +35,10 @@
 
 <div class="copoverde">
   <img class= "copoverde" src="produto1.png"> 
+</div>
+
+<div class ="coporosa" >
+ <img class="coporosa" src="coporosa.png">
 </div>
 
 <div>
