adicionado novas descrições

--- a/index.html
+++ b/index.html
@@ -41,7 +41,13 @@
  <img class="coporosa" src="coporosa.png">
 </div>
 
+
 <div>
+<p class="descrição2"> <p> Descubra o sabor icônico do café com Starbucks. Desde 1971, temos a paixão por proporcionar experiências únicas com cada xícara que servimos.
+<br> Nosso cardápio diversificado oferece uma seleção de cafés artesanais, chás premium e uma variedade de opções alimentares para atender a todos os gostos. </p>
+</div>
+
+  <div>
 <img class= "logo" src= 'logobr.png'>
 </div> 
 
