--- a/index.html
+++ b/index.html
@@ -1,57 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="stylesheet" href="style.css">
     <meta charset="UTF-8">
-  <link  rel="icon" href="star bucks icon.jpg" > 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>www.starbucks.com</title>
-
+    <title>Gvon88.sports</title>
+    <link rel="icon" href="GVON88.jpg" type="image/x-icon">
 </head>
 <body>
-  <div class= 'acesso'>
-    <ul>
-      <li>Casa</li>
-      <li>Menu</li>
-      <li>Contato</li>
-      <li>Quais as novas</li>
-    </ul>
-  </div>
-   
-  
-    <h1>NÃO É APENAS UM CAFÉ É</h1>
-<div>
-<H1 class="starbucks"> STAR BUCKS </H1>
-</div> 
-
-    <P class= 'descrição'> No Starbucks, cada visita é uma experiência única que vai além de uma simples xícara de café. <br> 
-    Nosso site é o seu portal para explorar a ampla variedade de bebidas artesanais, acompanhamentos deliciosos
-     e novidades irresistíveis.</P>
-
-
-<h2 class= "cliqueaqui"> clique aqui </h2>
-</div>
-
-
-<div class="copoverde">
-  <img class= "copoverde" src="produto1.png"> 
-</div>
-
-<div class ="coporosa" >
- <img class="coporosa" src="coporosa.png">
-</div>
-
 
 <div>
-<p class="descrição2"> <p> Descubra o sabor icônico do café com Starbucks. Desde 1971, temos a paixão por proporcionar experiências únicas com cada xícara que servimos.
-<br> Nosso cardápio diversificado oferece uma seleção de cafés artesanais, chás premium e uma variedade de opções alimentares para atender a todos os gostos. </p>
+  <img class ="minha-imagem" img src="GVON88.jpg">
 </div>
 
-  <div>
-<img class= "logo" src= 'logobr.png'>
-</div> 
+<h1>Sistema de Atividades</h1>
 
-
+<div class = "botões">
+     <a href= "login.html"> fazer login</a>
+     <a href=" cadastro.html"> cadastrar-se</a>
+   </div>
+</div>
 
 </body>
 </html>
